// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic component properties mounting components can mount a simple functional component 1`] = `[Function]`;

exports[`basic component properties mounting components ccomponent: can handle empty props 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__30\`
    let _1 = {val:undefined};
    let vn3 = this.makeComponent(\`k2\`, metadata, \\"Child\\", ctx, _1);
    let vn5 = {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
    return vn5;
}"
`;

exports[`basic component properties mounting components fcomponent: can handle empty props 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__32\`
    let _1 = {val:undefined};
    let vn3 = this.makeComponent(\`k2\`, metadata, \\"Child\\", ctx, _1);
    let vn5 = {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
    return vn5;
}"
`;
